# mem

./: .gitignore  AUTHORS  Makefile  Makefile.am  NEWS  README  configure.ac  libtool
exampleProgram/: Makefile  Makefile.am  exampleProgram  exampleProgram.c
exampleProgram/.deps/: exampleProgram-exampleProgram.Po
exampleProgram/.libs/: exampleProgram
include/: Makefile  Makefile.am
include/mem/: mem.h
libTest/: Makefile  libTest.c  libTest.la.bk
libTest/.deps/: libTest_la-libTest.Plo
libmem/: Makefile  Makefile.am  mem.c
libmem/.deps/: libmem_la-mem.Plo
