#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libmem.la

#######################################
# Build information for each library

# Sources for libmem
libmem_la_SOURCES = mem.c

# Linker options libmemProgram
libmem_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libmem_la_CPPFLAGS = -I$(top_srcdir)/include

